--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "serve": "node ./serve.js"
+    "serve": "node ./serve.js",
+    "deploy": "gh-pages -d public"
   },
   "author": "Konrad Nowakowksi <konrad.x92@gmail.com>",
   "license": "UNLICENSED",
   "devDependencies": {
     "connect": "^3.7.0",
+    "gh-pages": "^3.2.3",
     "livereload": "^0.9.3",
     "parseurl": "^1.3.3",
     "serve-static": "^1.14.1"
